--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=z, initial-scale=1.0">
-    <title>Document</title>
+    <title>Total Perfomance</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+<header>
+    <section>
+        <h1 id="logotexto">Total Perfomance</h1>
+    </section>
+    <div>
+        <img id="logo" src="fundo.jpg">
+    </div>
+</header>
 <body>
     
 </body>
