--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="logotexto">Total Perfomance</h1>
     </section>
     <div>
-        <img id="logo" src="fundo.jpg">
+        <img id="logo" src="logo.png">
     </div>
 </header>
 <body>
