--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Total Perfomance</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<header>
+<header #id="cabeçalho">
     <section>
-        <h1 id="logotexto">Total Perfomance</h1>
+        <h1 id="logotexto">Total Perfomance<h1>
     </section>
     <div>
         <img id="logo" src="logo.png">
     </div>
+    <nav></nav>
 </header>
 <body>
     
