--- a/index.html
+++ b/index.html
@@ -7,16 +7,26 @@
     <title>Total Perfomance</title>
     <link rel="stylesheet" href="index.css">
 </head>
-<header #id="cabeçalho">
-    <section>
-        <h1 id="logotexto">Total Perfomance<h1>
-    </section>
-    <div>
-        <img id="logo" src="logo.png">
-    </div>
-    <nav></nav>
-</header>
 <body>
+    <header #id="cabeçalho">
+        <section>
+            <h1 id="logotexto">Total Perfomance<h1>
+        </section>
+        <div>
+            <img id="logo" src="logo.png">
+        </div>
+        <nav></nav>
+    </header>
+    <main class="conteudo">
+        <section>
+            <div>
+                <h1>
+
+                </h1>
+            </div>
+        </section>
+    </main>
+
     
 </body>
 </html>
