--- a/index.html
+++ b/index.html
@@ -14,9 +14,34 @@
     <div>
         <img id="logo" src="logo.png">
     </div>
-    <nav></nav>
+    <nav>
+        <a>Cadastre-se</a>
+        <a>Suplementos</a>
+        <a>Emagrecimento</a>
+        <a>Hipertrofia</a>
+        <a>Contatos</a>
+    </nav>
 </header>
 <body>
+    <header #id="cabeçalho">
+        <section>
+            <h1 id="logotexto">Total Perfomance<h1>
+        </section>
+        <div>
+            <img id="logo" src="logo.png">
+        </div>
+        <nav></nav>
+    </header>
+    <main class="conteudo">
+        <section>
+            <div>
+                <h1>
+
+                </h1>
+            </div>
+        </section>
+    </main>
+
     
 </body>
 </html>
