--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header #id="cabeçalho">
+    <header id="cabeçalho">
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
@@ -23,10 +23,10 @@
             <a>Contatos</a>
         </nav>
     </header>
-    <main class="conteudo">
+    <main id="conteudo">
         <section>
             <div>
-                <h1>
+                <h1>alou mundo
 
                 </h1>
             </div>
