--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header #id="cabeçalho">
+    <header id="cabeçalho">
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
-        <div>
             <img id="logo" src="logo.png">
-        </div>
         <nav>
             <a>Cadastre-se</a>
             <a>Suplementos</a>
