--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
             <img id="logo" src="logo.png">
-        <nav>
+        <nav class="conteudonav">
             <a>Cadastre-se</a>
             <a>Suplementos</a>
             <a>Emagrecimento</a>
