--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <a>Contatos</a>
         </nav>
     </header>
-    <main id="conteudo">
-        <section>
-            <div>
-                <h1>alou mundo
-
+    <main class="conteudo">
+        <section class="conteudo-principal">
+            <div class="conteudo-principal-escrito">
+                <h1 class="conteudo-principal-escrito-pergunta">Quem somos nós?
                 </h1>
+                <h2 class="conteudo-principal-escrito-resposta">Umas das lojas pioneiras no ramo de suplementação e artigos de musculação </h2>
             </div>
         </section>
     </main>
