--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         </section>
             <img id="logo" src="logo.png">
         <nav class="conteudonav">
-            <a>Cadastre-se</a>
-            <a>Suplementos</a>
-            <a>Emagrecimento</a>
-            <a>Hipertrofia</a>
-            <a>Contatos</a>
+            <a class="anav" href="cadastro.html">Cadastre-se</a>
+            <a class="anav" href="suplementos.html">Suplementos</a>
+            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
+            <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
     <main class="conteudo">
