--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
     <main class="conteudo">
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-escrito-pergunta">Quem somos nós?
-                </h1>
+                <h1 class="conteudo-principal-escrito-pergunta">Quem somos nós?</h1>
                 <h2 class="conteudo-principal-escrito-resposta">Umas das lojas pioneiras no ramo de suplementação e artigos de musculação </h2>
+                <br>
+                <br>
+                <h1 class="conteudo-principal-escrito-pergunta">Oque vendemos em nosso site?</h1>
+                <h2 class="conteudo-principal-escrito-resposta">Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia </h2>
             </div>
         </section>
     </main>
