--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-escrito-pergunta">Quem somos nós?</h1>
-                <h2 class="conteudo-principal-escrito-resposta">Umas das lojas pioneiras no ramo de suplementação e artigos de musculação </h2>
+                <h2 class="conteudo-principal-escrito-resposta">Umas das lojas pioneiras no ramo de suplementação e artigos de musculação. Criada em 1989 a Total Performance saiu de uma lojinha de suplementação na baixada fluminense para se tornar uma das maiores marcas nacionais para atletas de bodybuilding. Com intuito de fornecer qualidade e preço acessível a todos aqueles que querem ter uma vida mais saudável  e aumentaram o rendimento nos treinos de musculação, a Total Performance é a mais indicada justamente por liderar o ramo no Brasil.   </h2>
                 <br>
                 <br>
                 <h1 class="conteudo-principal-escrito-pergunta">Oque vendemos em nosso site?</h1>
-                <h2 class="conteudo-principal-escrito-resposta">Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia </h2>
+                <h2 class="conteudo-principal-escrito-resposta">Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia. </h2>
             </div>
         </section>
     </main>
