--- a/index.html
+++ b/index.html
@@ -29,8 +29,15 @@
                 <br>
                 <h1 class="conteudo-principal-escrito-pergunta">Oque vendemos em nosso site?</h1>
                 <h2 class="conteudo-principal-escrito-resposta">Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia. </h2>
+                <br>
+                <br>
             </div>
         </section>
     </main>
+    <br>
+    <br>
+    <br>
+    <br>
+    <footer class="rodape">Copyright © 2022, All rights reserved.</footer>
 </body>
 </html>
