coloquei margin no main

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <h2 class="conteudo-principal-escrito-resposta">Umas das lojas pioneiras no ramo de suplementação e artigos de musculação. Criada em 1989 a Total Performance saiu de uma lojinha de suplementação na baixada fluminense para se tornar uma das maiores marcas nacionais para atletas de bodybuilding. Com intuito de fornecer qualidade e preço acessível a todos aqueles que querem ter uma vida mais saudável  e aumentaram o rendimento nos treinos de musculação, a Total Performance é a mais indicada justamente por liderar o ramo no Brasil.   </h2>
                 <br>
                 <br>
-                <h1 class="conteudo-principal-escrito-pergunta">Oque vendemos em nosso site?</h1>
-                <h2 class="conteudo-principal-escrito-resposta">Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia. </h2>
+                <h1 class="conteudo-principal-escrito-pergunta">O que vendemos em nosso site?</h1>
+                <h2 class="conteudo-principal-escrito-resposta">Na Total Performace quando o assunto é musculação e vida saudável e equilibrada, somos especialistas.Vendemos Desde Suplementação Alimentar até Roupas e Artigos de Academia com a maior qualidade do mercado e preço de fábrica. </h2>
                 <br>
                 <br>
             </div>
