--- a/index.html
+++ b/index.html
@@ -32,12 +32,9 @@
                 <br>
                 <br>
             </div>
-        </section>
+            kdkfkdsjkfjd
     </main>
-    <br>
-    <br>
-    <br>
-    <br>
+  
     <footer class="rodape">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14697.360331107448!2d-43.339112552064485!3d-22.93769921987226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd82fa17c4585%3A0xc9b2cf48d0384a50!2sCaveira%20Suplementos!5e0!3m2!1sen!2sbr!4v1650140964601!5m2!1sen!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <p class="copyright">Copyright © 2022, All rights reserved.</p>
