--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </section>
             <img id="logo" src="logo.png">
         <nav class="conteudonav">
-            <a class="anav" href="cadastro.html">Cadastre-se</a>
-            <a class="anav" href="suplementos.html">Suplementos</a>
+            <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
+            <a class="anav" href="suplementos.html">Suplementos</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
