--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -13,9 +13,9 @@
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
         <nav class="conteudonav">
-            <a class="anav" href="cadastro.html">Cadastre-se</a>
+            <a class="anav" href="sobre.html">Sobre</a>
+            <a class="anav" href="index.html">Página Inicial</a>
             <a class="anav" href="suplementos.html">Suplementos</a>
-            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
