--- a/sobre.html
+++ b/sobre.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastre-se</title>
+    <title>Sobre</title>
+    <link rel="stylesheet" href="sobre.css">
 </head>
 <body>
+    <header id="cabecalho">
+        <section>
+            <h1 id="logotexto">Total Perfomance<h1>
+        </section>
+        <nav class="conteudonav">
+            <a class="anav" href="sobre.html">Sobre</a>
+            <a class="anav" href="index.html">Página Inicial</a>
+            <a class="anav" href="suplementos.html">Suplementos</a>
+            <a class="anav" href="contatos.html">Contatos</a>
+        </nav>
+    </header>
     
 </body>
 </html>
