--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
-            <a class="anav" href="suplementos.html">Suplementos</a>
+            <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
