--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="index.html">Página Inicial</a>
-            <a class="anav" href="suplementos.html">Suplementos</a>
+            <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
