ERRO NA PAGINA DA LOJA
Estou fazendo alguma coisa de errada, só não o que. Mesmo estando fora do header as fotos estão ali, vou tentar arrumar isso ainda hoje.

--- a/Loja.html
+++ b/Loja.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suplementos</title>
+    <title>Loja</title>
+    <link rel="stylesheet"  href="loja.css">
 </head>
 <body>
+    <heade id="cabeçalho">
+        <section>
+            <h1 id="logotexto">Total Perfomance<h1>
+        </section>
+            <img id="logo" src="imagens/logo.png">
+        <nav class="conteudonav">
+            <a class="anav" href="sobre.html">Sobre</a>
+            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
+            <a class="anav" href="Loja.html">Loja</a> <!--MUDAR ISSSO AQUI DEPOIS, IMPORTANTE NÃO ESQUECER-->
+            <a class="anav" href="contatos.html">Contatos</a>
+        </nav>
+        <br>
+    </header>
+    <main>
+            <section>
+                <img src="imagens/155839-600-600.png">
+                <img src="imagens/155867-800-800.png">
+                <img src="imagens/cratina_150g.png">
+            </section> <!-- RESOLVI PARAR POR AQUI POIS NÃO SEI OQ TA ACONTECENDO, A PORCARIA DAS FOTOS ESTÃO FORA DO HEADER E POR ALGUM MOTIVO CONTINUAM USANDO AS CARACTERISTICAS DELE-->
+
+    </main>
+    <footer></footer>
     
 </body>
 </html>
