--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
-            <img id="logo" src="logo.png">
+            <img id="logo" src="imagens/logo.png">
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
