--- a/Loja.html
+++ b/Loja.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet"  href="loja.css">
 </head>
 <body>
-    <heade id="cabeçalho">
+    <header id="cabeçalho">
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
@@ -16,17 +16,25 @@
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
-            <a class="anav" href="Loja.html">Loja</a> <!--MUDAR ISSSO AQUI DEPOIS, IMPORTANTE NÃO ESQUECER-->
+            <a class="anav" href="Loja.html">Loja</a> <!--MUDAR ISSO AQUI DEPOIS, IMPORTANTE NÃO ESQUECER-->
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
         <br>
     </header>
     <main>
-            <section>
-                <img src="imagens/155839-600-600.png">
-                <img src="imagens/155867-800-800.png">
-                <img src="imagens/cratina_150g.png">
-            </section> <!-- RESOLVI PARAR POR AQUI POIS NÃO SEI OQ TA ACONTECENDO, A PORCARIA DAS FOTOS ESTÃO FORA DO HEADER E POR ALGUM MOTIVO CONTINUAM USANDO AS CARACTERISTICAS DELE-->
+        <h1>PRINCIPAIS PRODUTOS DA LOJA</h1>
+            <section id="section-main">
+                <nav id="nav-main">
+                    <img src="imagens/155839-600-600.png">
+                    <img src="imagens/155867-800-800.png">
+                    <img src="imagens/cratina_150g.png">
+                    <img src="imagens/m_top-whey-protein-concentrado-1kg-growth-supplements.png">
+                    <img src="imagens/produto.jpg">
+                    <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png">
+                </nav>
+
+            </section><!-- Problema resolvido-->
+            <!-- Tem que tentar achar uma maneira de colocar as fotos no mesmo tamanho, alias tentei colocar um display diferente e deu muito errado as imagens não se moveram um px-->
 
     </main>
     <footer></footer>
