Mudança no pagina de hipertrofia
mexi na parte do background. Peguei o site da max e tentei me inspirar um pouco. Ve se vc gosta caso não a gente podia conversar depois para ver o que fazer, acho q assim ficou legal, me da feedback dps

--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -19,5 +19,12 @@
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
     </header>
+    <main>
+        <p>wowoww</p>
+        <section id="section-main">
+            
+
+        </section>
+    </main>
 </body>
 </html>
