--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -20,10 +20,10 @@
         </nav>
     </header>
     <main>
-        <section id="section-main">
-            
-
-        </section>
+        <section id="section-main"></section>
+        <div>
+            <h1>O que é Hipertrofia?</h1>
+        </div>
     </main>
 </body>
 </html>
