Barra de busca na hipertrofia
pensei que seria interessante se a gente tivesse uma barra de busca nas páginas. Sai olhando na internet e tentei copiar mais ou menos o que tava acontecendo. porem eu n consigo aumentar o tamanho da barra nem mexer muito nas configurações, depois se vc conseguir fica a vontade para mudar

--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -12,12 +12,18 @@
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
+        <form action="#" method="post">
+            <input type="text" name="search" id="search" placeholder="Faça sua busca" required>
+            <button type="submit"><i class="fas fa-search"></i></button>
+
+        </form>
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="index.html">Página Inicial</a>
             <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
+        
     </header>
     <main>
         <section id="section-main"></section>
