--- a/contatos.html
+++ b/contatos.html
@@ -16,7 +16,7 @@
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="index.html">Página Inicial</a>
             <a class="anav" href="Loja.html">Loja</a>
-            <a class="anav" href="contatos.html">Contatos</a>
+            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
         </nav>
     </header>
 </body>
