--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,7 @@
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
         <nav class="conteudonav">
-            <a class="anav" href="sobre.html">Sobre</a>
+            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
             <a class="anav" href="index.html">Página Inicial</a>
             <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
