alterações do css hipertrofia

--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="hiper.css">
 </head>
 <body>
+    <section id="section-main-header">
     <header id="cabecalho">
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
@@ -25,8 +26,9 @@
         </nav>
         
     </header>
+ </section>
     <main>
-        <section id="section-main"></section>
+        
         <div>
             <h1>O que é Hipertrofia?</h1>
         </div>
