--- a/contatos.html
+++ b/contatos.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contate-nos</title>
     <link rel="stylesheet" href="contato.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 </head>
 <body>
     <header id="cabecalho">
@@ -19,5 +21,31 @@
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
         </nav>
     </header>
+    <h1 id="titulo"> Formulário de Contato
+
+    </h1>
+    <section class="formul">
+    <div class="main-block">
+        <div class="lado-esquerdo">
+          <i class="fas fa-envelope"></i>
+          <i class="fas fa-at"></i>
+          <i class="fas fa-email-bulk"></i>
+        </div>
+        <form action="/">
+          <h1>Contate-nos</h1>
+          <div class="info">
+            <input class="fname" type="text" name="name" placeholder="Nome completo">
+            <input type="text" name="name" placeholder="Email">
+            <input type="text" name="name" placeholder="Número de telefome">
+            <input type="text" name="name" placeholder="CPF">
+          </div>
+          <p>Mensagem (Descreva o motivo do contato)</p>
+          <div>
+            <textarea rows="4"></textarea>
+          </div>
+          <button type="submit" href="/">Enviar</button>
+        </form>
+      </div>
+    </section>
 </body>
 </html>
