--- a/contatos.html
+++ b/contatos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="contato.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f0f4b190c9.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header id="cabecalho">
@@ -47,5 +48,14 @@
         </form>
       </div>
     </section>
+    <footer><nav class="redessociais">
+      <button class="botao"><i class="fa-brands fa-instagram fa-2x"></i>  Instagram</button>
+      <button class="botao"><i class="fa-brands fa-facebook fa-2x"></i>  Facebook</button>
+      <button class="botao"><i class="fa-brands fa-twitter fa-2x"></i>  Twitter</button>
+    </nav>
+
+    </footer>
+    
+</head>
 </body>
 </html>
