--- a/Loja.html
+++ b/Loja.html
@@ -12,7 +12,7 @@
         <section>
             <h1 id="logotexto">Total Perfomance<h1>
         </section>
-            <img id="logo" src="imagens/logo.png">
+          
         <nav class="conteudonav">
             <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="hipertrofia.html">Hipertrofia</a>
@@ -32,9 +32,11 @@
                     <img src="imagens/produto.jpg">
                     <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png">
                 </nav>
+            </section>
+            <div class="conteudo">
+                <div class="slides"></div>
 
-            </section><!-- Problema resolvido-->
-            <!-- Tem que tentar achar uma maneira de colocar as fotos no mesmo tamanho, alias tentei colocar um display diferente e deu muito errado as imagens não se moveram um px-->
+            </div>
 
     </main>
     <footer></footer>
