--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
                 <br>
                 <h1 class="conteudo-principal-escrito-pergunta">O que vendemos em nosso site?</h1>
                 <h2 class="conteudo-principal-escrito-resposta">Na Total Performace quando o assunto é musculação e vida saudável e equilibrada, somos especialistas.Vendemos desde suplementação alimentar até roupas e artigos de academia com a melhor qualidade do mercado e preço de fábrica. </h2>
+                
             </div>
     </main>
     <footer class="rodape">
-    <p class="copyright">Copyright © 2022, All rights reserved.</p>
+    <p class="copyright">Copyright © 2022, All rights reserved to Davi and Gabriel.</p>
 </footer>
 </body>
 </html>
