--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -24,13 +24,18 @@
             <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
-        
     </header>
  </section>
-    <main>
-        
-        <div>
-            <h1>O que é Hipertrofia?</h1>
+    <main class="conteudo-principal">
+        <div class="conteudo-principal-escrito">
+            <h1 class="conteudo-principal-escrito-pergunta">O que é Hipertrofia Muscular?</h1>\
+            <h2 class="conteudo-principal-escrito-resposta">A hipertrofia muscular é o aumento da massa muscular, que provoca o crescimento visível da musculatura corporal.
+
+                O processo de crescimento muscular é consequência da exigência física à qual é submetido o corpo devido aos estímulos hormonais, que atuam em determinados tecidos.
+                A prática de musculação, juntamente com o ajustado funcionamento do metabolismo do organismo, é o método mais eficaz para obter massa muscular, também chamada de massa magra.
+                O esforço durante a musculação é responsável por ocasionar um stress muscular e o aumento do volume do músculo é uma resposta fisiológica ao stress gerado pelo exercício.</h2>
+                <br>
+                <br>
         </div>
     </main>
 </body>
