--- a/contatos.html
+++ b/contatos.html
@@ -53,6 +53,7 @@
       <button class="botao"><i class="fa-brands fa-facebook fa-2x"></i>  Facebook</button>
       <button class="botao"><i class="fa-brands fa-twitter fa-2x"></i>  Twitter</button>
     </nav>
+    <!--ESCLARECIMENTO: Nós dois possuímos o conhecimento necessário para colocar um link. Entretanto, como não possuímos nenhema rede social da marca, decidimos não colocar nada.-->
 
     </footer>
     
