--- a/Loja.html
+++ b/Loja.html
@@ -14,9 +14,9 @@
         </section>
           
         <nav class="conteudonav">
+            <a class="anav" href="index.html">Página Inicial</a>
             <a class="anav" href="sobre.html">Sobre</a>
-            <a class="anav" href="hipertrofia.html">Hipertrofia</a>
-            <a class="anav" href="Loja.html">Loja</a> <!--MUDAR ISSO AQUI DEPOIS, IMPORTANTE NÃO ESQUECER-->
+            <a class="anav" href="hipertrofia.html">Hipertrofia</a> <!--MUDAR ISSO AQUI DEPOIS, IMPORTANTE NÃO ESQUECER-->
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
         <br>
