--- a/hipertrofia.html
+++ b/hipertrofia.html
@@ -19,8 +19,8 @@
 
         </form>
         <nav class="conteudonav">
-            <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="index.html">Página Inicial</a>
+            <a class="anav" href="sobre.html">Sobre</a>
             <a class="anav" href="Loja.html">Loja</a>
             <a class="anav" href="contatos.html">Contatos</a>
         </nav>
@@ -36,6 +36,33 @@
                 O esforço durante a musculação é responsável por ocasionar um stress muscular e o aumento do volume do músculo é uma resposta fisiológica ao stress gerado pelo exercício.</h2>
                 <br>
                 <br>
+                <br>
+                <br>
+                <h1 class="conteudo-principal-escrito-pergunta">É necessário dieta para hipertrofia?</h1>
+                <h2 class="conteudo-principal-escrito-resposta">Vale sempre lembrar: na hora de aderir à dieta para ajudar na hipertrofia, os nutrientes base são: carboidrato, gorduras boas e proteína. Por isso, para o ganho de massa muscular, devemos consumir alimentos que são fontes de proteína, como ovos, frangos, e carnes — preferencialmente cortes magros, como patinho, coxão mole ou duro. 
+                Além disso, também devemos consumir alimentos que são fontes de carboidrato, como o pão, o arroz e frutas, como a banana.</h2>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1 class="conteudo-principal-escrito-pergunta">Suplemetos nossos que ajudam na Hipertrofia:</h1>
+                    <ul class="conteudo-principal-escrito-resposta2">
+                        <br>
+                        <li>Whey Protein</li>
+                        <br>
+                        <li>Hipercálorico</li>
+                        <br>
+                        <li>Creatina</li>
+                        <br>
+                        <li>BCAA</li>
+                        <br>
+                        <li>Beta-Alanina</li>
+                        <br>
+                    </ul>
+                    <br>
+                    <h2 class="conteudo-principal-escrito-resposta3">Adquira eles agora em nossa loja <a class="loja" href="Loja.html">Clicando Aqui!</a></h2>
+                    <br>
+                    <br>
         </div>
     </main>
 </body>
