--- a/Loja.html
+++ b/Loja.html
@@ -22,62 +22,41 @@
         <br>
     </header>
     <main>
-        <h1>PRINCIPAIS PRODUTOS DA LOJA</h1>
-           <!-- <section id="section-main">
-                <nav id="nav-main">
-                    <img src="imagens/155839-600-600.png">
-                    <img src="imagens/155867-800-800.png">
-                    <img src="imagens/cratina_150g.png">
-                    <img src="imagens/m_top-whey-protein-concentrado-1kg-growth-supplements.png">
-                    <img src="imagens/produto.jpg">
-                    <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png">
-                </nav>-->
-            </section>
-            <div class="conteudo">
-                <div class="slides">
-                    <input type="radio" name="slide" id="slide1" checked>
-                    <input type="radio" name="slide" id="slide2">
-                    <input type="radio" name="slide" id="slide3">
-                    <input type="radio" name="slide" id="slide4">
-                    <input type="radio" name="slide" id="slide5">
-                    <input type="radio" name="slide" id="slide6">
+        <h1 id="h1daloja">PRINCIPAIS PRODUTOS DA LOJA</h1>
 
-                    <div class="slide s1">
-                        <img src="imagens/155839-600-600.png" alt="">
+            <section class="produtos">
+                <section class="produto">
+                    <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png" alt="Whey protein integral medica">
+                    <p>Whey Protein Integral medica</p>
+                    <p>R$00000,000</p>
+                </section>
+                <section class="produto">
+                    <img src="imagens/m_top-whey-protein-concentrado-1kg-growth-supplements.png" alt="">
+                    <p>Whey Protein Growth</p>
+                    <p>R$00000,000</p>
+                </section>
+                <section class="produto">
+                    <img src="imagens/produto.jpg" alt="">
+                    <p> Creatina growth</p>
+                    <p>R$00000,000</p>
+                </section>
+                <section class="produto">
+                    <img src="imagens/cratina_150g.png" alt="">
+                    <p>Creatina Integral Médica</p>
+                    <p>R$00000,000</p>
+                </section>
+                <section class="produto">
+                    <img src="imagens/155867-800-8000.png" alt="">
+                    <p>Top whey da Max Titanium</p>
+                    <p>R$00000,000</p>
+                </section>
+                <section class="produto">
+                    <img src="imagens/155839-600-600.png" alt="">
+                    <p>Creatina da Max Titanium</p>
+                    <p>R$00000,000</p>
+                </section>
 
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/155867-800-800.png" alt="">
-
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/cratina_150g.png" alt="">
-
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/m_top-whey-protein-concentrado-1kg-growth-supplements.png" alt="">
-
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/produto.jpg" alt="">
-
-                    </div>
-                    <div class="slide">
-                        <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png"alt>
-                    </div>
-                </div>
-
-                <div class="navegação">
-                    <label class="barra" for="slide1"></label>
-                    <label class="barra" for="slide2"></label>
-                    <label class="barra" for="slide3"></label>
-                    <label class="barra" for="slide4"></label>
-                    <label class="barra" for="slide5"></label>
-                    <label class="barra" for="slide6"></label>
-                </div>
-
-            </div>
-
+            </section>-->
     </main>
     <footer></footer>
     
