--- a/Loja.html
+++ b/Loja.html
@@ -27,36 +27,39 @@
             <section class="produtos">
                 <section class="produto">
                     <img src="imagens/WHEY-IN-100--BAUNILHA-ME3287-907g-1000x1000.png" alt="Whey protein integral medica">
-                    <p>Whey Protein Integral medica</p>
-                    <p>R$00000,000</p>
+                    <p>Whey Protein Integral Medica</p>
+                    <p>R$129,99</p>
                 </section>
                 <section class="produto">
                     <img src="imagens/m_top-whey-protein-concentrado-1kg-growth-supplements.png" alt="">
                     <p>Whey Protein Growth</p>
-                    <p>R$00000,000</p>
+                    <p>R$89,99</p>
                 </section>
                 <section class="produto">
                     <img src="imagens/produto.jpg" alt="">
                     <p> Creatina growth</p>
-                    <p>R$00000,000</p>
+                    <p>139,99</p>
                 </section>
+            </section>
+            <section class="produtos">
                 <section class="produto">
                     <img src="imagens/cratina_150g.png" alt="">
-                    <p>Creatina Integral Médica</p>
-                    <p>R$00000,000</p>
+                    <p>Creatina Integral Medica</p>
+                    <p>R$169,99</p>
                 </section>
-                <section class="produto">
+                <section class="produto" >
                     <img src="imagens/155867-800-8000.png" alt="">
                     <p>Top whey da Max Titanium</p>
-                    <p>R$00000,000</p>
+                    <p>R$199,99</p>
                 </section>
-                <section class="produto">
+                <section  class="produto">
                     <img src="imagens/155839-600-600.png" alt="">
                     <p>Creatina da Max Titanium</p>
-                    <p>R$00000,000</p>
+                    <p>R$149,99</p>
                 </section>
+            </section>
 
-            </section>-->
+            
     </main>
     <footer></footer>
     
