--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
             <br>
             <br>
             <h1 class="conteudo-principal-escrito-prop">Fundação:</h1>
-            <h2 class="conteudo-principal-escrito-prop2">A empresa foi fundada em 1989 numa parceira entre dois universitários que visavam ingressar o mercado de trabalho da musculação, por uma paixão que ambos tinham com o esporte</h2>
+            <h2 class="conteudo-principal-escrito-prop2">A empresa foi fundada em 1989 numa parceria entre dois jovens universitários que visavam ingressar no mercado de trabalho pelo ramo da suplementação esportiva, devido a uma paixão pelo esporte que ambos tinham.</h2>
             <br>
             <br>
             <br>
@@ -51,7 +51,7 @@
     </section>
 <footer class="rodape">
     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1092.0083014437716!2d-43.21114292238535!3d-22.98469362533429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd5e83b8c72f1%3A0x4f36ac73d222df0a!2sPULSE%20NUTRITION!5e0!3m2!1spt-BR!2sbr!4v1650838172942!5m2!1spt-BR!2sbr" width="1000" height="700" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-   <p class="copyright">Copyright © 2022, All rights reserved to Davi and Gabriel.</footer>
-   </p>
+   <p class="copyright">Copyright © 2022, All rights reserved to Davi and Gabriel.</p>
+</footer>
 </body>
 </html>
